infra/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: #[Service名]
  namespace: #[Namespace名]
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: #[Application名]
    version: blue
